# f1-race

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
OBJFileLoader/: __init__.py  objloader.py  objloaderv2.py  objviewer.py
app/: __init__.py  components.py  draw.py  keyboard.py  scenery.py
app/utils/: colors.py  components.py
objects/: F1 low poly.blend  F1 low poly.blend1  F1-oposite_car01.mtl  F1-oposite_car02.mtl  F1-oposite_car03.mtl  F1_car.mtl
objects/Scenary/: board.mtl
objects/Simple_car/: car1.3ds  car1.fbx  car1.mtl
objects/main_car/: blue_car.mtl
objects/oposite_cars/: gray_car.mtl  red_car.mtl  roxo_car.mtl  teste1.mtl  yellow_car.mtl
