[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["keven silva <keven.almeida@alu.ufc.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
PyOpenGL = "^3.1.6"
pygame = "^2.1.2"
pandas = "^1.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
